# mcp_searxng

./: .gitignore  Makefile  README.md  main.py  mcp_searxng.py  pyproject.toml  test_mcp_searxng.py
.github/workflows/: test.yml
