[project]
name = "mcp_searxng"
version = "0.1.0"
description = "Simple MCP Server for use with local SearxNG instance without authentication"
readme = "README.md"
requires-python = ">=3.13"
# intentionally pinned versions to avoid compatibility issues (== instead of >=)
dependencies = [
  "fastmcp==2.13.0.2",
  "httpx==0.28.1",
  "pydantic==2.11.7",
  "pydantic-settings==2.11.0",
  "pytest-asyncio==1.2.0",
  "pytest-cov==7.0.0",
]

[project.optional-dependencies]
dev = ["pytest==8.4.2", "pytest-asyncio==1.2.0"]

[tool.pytest.ini_options]
addopts = "--verbose --tb=short --cov=mcp_searxng --cov-report=term-missing"
testpaths = ["."]

[tool.coverage.run]
patch = ["subprocess"]
